# applied_stats

./: .gitignore  Demonstration.ipynb  LICENSE.txt  MANIFEST.in  README.md  Statistics_OOP.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
applied_stats/: confidence_intervals.py  continuous_distributions.py  hypothesis_testing.ipynb  hypothesis_testing.py  hypothesis_testing_nb.ipynb  mle.py
demonstrations/: Demonstration.ipynb
module/: Statistics_OOP.py
stats_tools/: continuous_distributions.py  mle.py  scratch.py
tests/: test.py
