[metadata]

name = stats_tools
version = 0.0.1
author = William Tirone
author_email = will.tirone1@gmail.com
description = A package of basic statistical tools to calculate probabilities
and maximum likelihood estimators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WillTirone/Statistics_Module
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = stats_tools
packages = find:
python_requires = >=3.6

[options.packages.find]
where = stats_tools
